<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_aplicacion">Asteorides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="puntuaciones">Puntuaciones</string>

</resources>