<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Asteroides" >

    <TextView
        android:id="@+id/textView"
        style="@style/TextoAsteroides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/titulo_aplicacion"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarJuego"
        android:text="@string/jugar" />

    <Button
        android:id="@+id/button2"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPreferencias"
        android:text="@string/configurar" />

    <Button
        android:id="@+id/button3"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acerca_de" />

    <Button
        android:id="@+id/button4"
        style="@style/TextoAsteroides.Botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/puntuaciones" />

</LinearLayout>